fix off centre about section

--- a/src/components/About/index.module.css
+++ b/src/components/About/index.module.css
@@ -1,5 +1,9 @@
 .about {
     padding-top: 200px;
+    padding-left: 50px;
+    /* display: flex;
+    flex-direction: column;
+    justify-content: center; */
 }
 
 .title {
@@ -47,8 +51,8 @@
 .role {
     width: fit-content;
     align-self: center;
-    padding-left: 7px;
-    padding-right: 7px;
+    padding-left: 10px;
+    padding-right: 10px;
     padding-top: 5px;
     color: rgb(66, 103, 215);
     background-color: rgb(199, 222, 248);
